// ---
// Floorida Database Schema (Updated v2 - Personal Level & New Fields)
// 최종 업데이트: 2025-11-15
// ---

// 1. Users Table (인증)
Table Users {
  user_id int [pk, increment]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  username varchar(100) [unique, not null]
  created_at timestamp [default: `now()`]
}

// 2. Teams Table
Table Teams {
  team_id int [pk, increment]
  name varchar(255) [not null]
  level int [default: 1, not null]  // 팀 층수 (오늘의 팀 일정 모두 완료 시 +1)
  description text
  created_at timestamp [default: `now()`]
  join_code varchar(20) [unique, not null]
}

// 3. Team_Members Table
Table Team_Members {
  team_id int [ref: > Teams.team_id]
  user_id int [ref: > Users.user_id]
  role varchar(50) [default: 'member', not null]
  joined_at timestamp [default: `now()`]
  indexes { (team_id, user_id) [pk] }
}

// 4. Schedules Table (일정/목표)
Table Schedules {
  schedule_id int [pk, increment]
  creator_user_id int [not null, ref: > Users.user_id]
  team_id int [ref: > Teams.team_id, default: null]
  
  // 전체 일정의 표시용 제목 (예: "토익 900점 달성", "자료구조 학습")
  title varchar(255) [not null]
  
  // 사용자가 AI 생성 시 입력한 원래 목표 텍스트 (수동 생성 시 null 가능)
  // 예: "3주 안에 토익 900점 달성하기"
  original_goal varchar(1000)
  
  // 목표에 대한 요약/설명 (AI가 생성하거나 사용자가 직접 기술, 선택 사항)
  // 예: "RC와 LC를 균형있게 학습하며 실전 모의고사 중심으로 준비"
  goal_summary varchar(2000)
  
  start_date date [not null]
  end_date date [not null]
  color varchar(7)  // HEX 색상 코드
  created_at timestamp [default: `now()`]
  
  Note: 'title은 프로젝트 전체 제목. 하위 Floors는 각 단계별 세부 제목을 가짐'
}

// 5. Floors Table (세부 계획/층)
Table Floors {
  floor_id int [pk, increment]
  schedule_id int [ref: > Schedules.schedule_id, note: 'Cascade delete']
  creator_user_id int [not null, ref: > Users.user_id]
  title varchar(255) [not null]  // 각 단계의 제목 (예: "RC 문법 복습", "모의고사 1회")
  scheduled_date date
  created_at timestamp [default: `now()`]
  
  Note: 'title은 Schedule의 하위 단계 제목. Schedule.title이 "토익 900점"이면 Floor.title은 "RC 문법", "LC 듣기" 등'
}

// 6. Floor_Statuses Table (완료 여부)
Table Floor_Statuses {
  status_id int [pk, increment]
  floor_id int [ref: > Floors.floor_id, note: 'Cascade delete']
  user_id int [ref: > Users.user_id]
  is_completed boolean [default: false, not null]
  completed_at timestamp
  indexes { (floor_id, user_id) [unique] }
}

// 7. Characters Table (아바타 꾸미기 정보)
Table Characters {
  character_id int [pk, increment]
  user_id int [unique, not null, ref: - Users.user_id]
  image_url varchar(255)  // S3 저장된 캐릭터 이미지 URL
  equipped_items json  // 현재 장착 중인 아이템 목록 (JSON: {"hat": 3, "face": 7, "accessory": 12})
  created_at timestamp [default: `now()`]
  Note: '회원가입 시 자동 생성. equipped_items는 아이템 ID를 타입별로 저장'
}

// 8. Badges Table
Table Badges {
  badge_id int [pk, increment]
  name varchar(255) [not null]
  type varchar(50) [default: 'INDIVIDUAL', not null]  // 'INDIVIDUAL' or 'TEAM'
  description text
  image_url varchar(255)
  offset_x int
  offset_y int
  width int
  height int
}

// 9. User_Badges Table (개인 배지)
Table User_Badges {
  user_id int [ref: > Users.user_id]
  badge_id int [ref: > Badges.badge_id]
  earned_at timestamp [default: `now()`]
  indexes { (user_id, badge_id) [pk] }
}

// 10. Team_Badges Table (팀 배지)
Table Team_Badges {
  team_id int [ref: > Teams.team_id]
  badge_id int [ref: > Badges.badge_id]
  earned_at timestamp [default: `now()`]
  indexes { (team_id, badge_id) [pk] }
}

// --- 온보딩 Enum ---
Enum PlanningTendency {
  PROCRASTINATES     // 미루는 편
  PLANS_ONLY         // 계획만 세우는 편
  PLANS_AND_EXECUTES // 계획하고 실행하는 편
}

Enum DailyStudyHours {
  HOURS_0_1     // 0~1시간
  HOURS_1_3     // 1~3시간
  HOURS_3_6     // 3~6시간
  HOURS_6_10    // 6~10시간
  HOURS_10_PLUS // 10시간 이상
}

// 11. User_Profiles Table (사용자 성향, 재화, 개인 층수)
Table User_Profiles {
  user_id int [pk, ref: - Users.user_id]
  planning_tendency PlanningTendency [not null]
  daily_study_hours DailyStudyHours [not null]
  
  points int [default: 0, not null]  // 개인 재화(포인트)
  personal_level int [default: 1, not null]  // 개인 층수 (오늘의 내 모든 일정 완료 시 +1)

  last_daily_login_reward_date date  // 마지막 일일 접속 보상 지급일
  daily_login_streak int [default: 0, not null]  // 일일 접속 보상 기준 연속 출석 일수
  
  Note: 'XP 시스템 제거 - 층수(level)는 누적이 아닌 날짜별 완료 시 증가'
}

// 12. Items Table (상점 판매 목록)
Table Items {
  item_id int [pk, increment]
  name varchar(100) [not null]
  type varchar(50) [not null]  // 'face', 'hat', 'accessory', etc.
  price int [not null, default: 0]
  image_url varchar(255) [not null]
  description text
}

// 13. User_Inventory Table (사용자 인벤토리)
Table User_Inventory {
  inventory_id int [pk, increment]
  user_id int [ref: > Users.user_id]
  item_id int [ref: > Items.item_id]
  acquired_at timestamp [default: `now()`]
  indexes { (user_id, item_id) [unique] }
}

// ---
// 주요 관계 정리
// ---

// User → Schedules (1:N, 일정 생성자)
// User → Floors (1:N, Floor 생성자)
// User → Character (1:1, 아바타)
// User → User_Profile (1:1, 성향/재화/개인층수)
// User → User_Badges (N:M, 개인 배지)
// User → User_Inventory (N:M, 아이템 소유)
// User → Team_Members (N:M, 팀 소속)
// User → Floor_Statuses (N:M, Floor 완료 여부)

// Team → Schedules (1:N, 팀 일정)
// Team → Team_Members (1:N, 팀원)
// Team → Team_Badges (N:M, 팀 배지)

// Schedule → Floors (1:N, 세부 계획, Cascade Delete)
// Floor → Floor_Statuses (1:N, 완료 기록, Cascade Delete)

// ---
// 주요 변경사항 (v2.1)
// ---
// 1. Schedules 테이블에 original_goal, goal_summary 필드 추가
//    - UI에서 "어떤 목표인가요?" 입력과 표시용 제목/설명 분리
//    - title: 전체 일정 제목 (예: "토익 900점")
//    - Floors.title: 각 단계 제목 (예: "RC 문법 복습")
// 2. User_Profiles에 personal_level 추가 (개인 층수)
// 3. XP 시스템 제거 (층수는 날짜별 완료 시 증가)
// 4. Characters 테이블 equipped_items 필드 복원 (JSON 타입)
//    - 장착 중인 아이템 ID를 타입별로 저장
//    - 예: {"hat": 3, "face": 7, "accessory": 12}
// 5. Cascade delete 관계 명시 (Schedule/Floor 삭제 시 하위 데이터 자동 삭제)
